--- a/configFileHere/gfwlist.conf
+++ b/configFileHere/gfwlist.conf
@@ -34,19 +34,24 @@ DOMAIN-SUFFIX,tw,Proxy,force-remote-dns
 
 // AD Block
 // thx  https://github.com/lhie1/Surge 
-// updated on 2017-05-31 17:01:36
+// updated on 2017-06-10 23:21:41
 
 DOMAIN-SUFFIX,ad.m.iqiyi.com,REJECT
-DOMAIN-SUFFIX,afp.qiyi.com,REJECT
+DOMAIN-SUFFIX,afp.iqiyi.com,REJECT
 DOMAIN-SUFFIX,api.cupid.iqiyi.com,REJECT
 DOMAIN-SUFFIX,c.uaa.iqiyi.com,REJECT
 DOMAIN-SUFFIX,cloudpush.iqiyi.com,REJECT
 DOMAIN-SUFFIX,cm.passport.iqiyi.com,REJECT
+DOMAIN-SUFFIX,cmts.iqiyi.com,REJECT
+DOMAIN-SUFFIX,data.video.qiyi.com,REJECT
 DOMAIN-SUFFIX,emoticon.sns.iqiyi.com,REJECT
 DOMAIN-SUFFIX,gamecenter.iqiyi.com,REJECT
 DOMAIN-SUFFIX,hotchat-im.iqiyi.com,REJECT
 DOMAIN-SUFFIX,ifacelog.iqiyi.com,REJECT
 DOMAIN-SUFFIX,mbdlog.iqiyi.com,REJECT
+DOMAIN-SUFFIX,msg.71.am,REJECT
+DOMAIN-SUFFIX,msga.cupid.iqiyi.com,REJECT
+DOMAIN-SUFFIX,paopao.iqiyi.com,REJECT
 DOMAIN-SUFFIX,policy.video.iqiyi.com,REJECT
 DOMAIN-SUFFIX,rcd.iqiyi.com,REJECT
 DOMAIN-SUFFIX,api.game.letvstore.com,REJECT
@@ -104,8 +109,6 @@ DOMAIN-SUFFIX,api.gamex.mobile.youku.com,REJECT
 DOMAIN-SUFFIX,atm.youku.com,REJECT
 DOMAIN-SUFFIX,b.smartvideo.youku.com,REJECT
 DOMAIN-SUFFIX,c.yes.youku.com,REJECT
-DOMAIN-SUFFIX,das.api.youku.com,REJECT
-DOMAIN-SUFFIX,das.mobile.youku.com,REJECT
 DOMAIN-SUFFIX,dev-push.m.youku.com,REJECT
 DOMAIN-SUFFIX,dl.g.youku.com,REJECT
 DOMAIN-SUFFIX,e.stat.ykimg.com,REJECT
@@ -135,7 +138,6 @@ DOMAIN-SUFFIX,sdk.m.youku.com,REJECT
 DOMAIN-SUFFIX,stat.tudou.com,REJECT
 DOMAIN-SUFFIX,stat.youku.com,REJECT
 DOMAIN-SUFFIX,static.lstat.youku.com,REJECT
-DOMAIN-SUFFIX,statis.api.3g.youku.com,REJECT
 DOMAIN-SUFFIX,stats.tudou.com,REJECT
 DOMAIN-SUFFIX,store.tv.api.3g.youku.com,REJECT
 DOMAIN-SUFFIX,store.xl.api.3g.youku.com,REJECT
@@ -723,8 +725,6 @@ DOMAIN-SUFFIX,policy.jd.com,REJECT
 DOMAIN-SUFFIX,re.jd.com,REJECT
 DOMAIN-SUFFIX,re.m.jd.com,REJECT
 DOMAIN-SUFFIX,stat.m.jd.com,REJECT
-DOMAIN-SUFFIX,union.click.jd.com,REJECT
-DOMAIN-SUFFIX,union.m.jd.com,REJECT
 DOMAIN-SUFFIX,x.jd.com,REJECT
 DOMAIN-SUFFIX,ads.service.kugou.com,REJECT
 DOMAIN-SUFFIX,d.kugou.com,REJECT
@@ -976,7 +976,6 @@ DOMAIN-SUFFIX,adweb.ximalaya.com,REJECT
 DOMAIN-SUFFIX,linkeye.ximalaya.com,REJECT
 DOMAIN-SUFFIX,location.ximalaya.com,REJECT
 DOMAIN-SUFFIX,xdcs-collector.ximalaya.com,REJECT
-DOMAIN,liveupdate.mac.sandai.net,REJECT
 DOMAIN-SUFFIX,sugar.zhihu.com,REJECT
 DOMAIN-SUFFIX,zhihu-analytics.zhihu.com,REJECT
 DOMAIN-SUFFIX,zhihu-web-analytics.zhihu.com,REJECT
@@ -1001,7 +1000,6 @@ DOMAIN-KEYWORD,openx,REJECT
 DOMAIN-KEYWORD,partnerad,REJECT
 DOMAIN-KEYWORD,pingfore,REJECT
 DOMAIN-KEYWORD,supersonicads,REJECT
-DOMAIN-KEYWORD,tracking,REJECT
 DOMAIN-KEYWORD,uedas,REJECT
 DOMAIN-KEYWORD,umeng,REJECT
 DOMAIN-KEYWORD,usage,REJECT
@@ -1016,17 +1014,24 @@ DOMAIN-SUFFIX,51yes.com,REJECT
 DOMAIN-SUFFIX,818mov.com,REJECT
 DOMAIN-SUFFIX,86.cc,REJECT
 DOMAIN-SUFFIX,99click.com,REJECT
+DOMAIN-SUFFIX,a.applovin.com,REJECT
+DOMAIN-SUFFIX,a.visualrevenue.com,REJECT
 DOMAIN-SUFFIX,a1.itc.cn,REJECT
 DOMAIN-SUFFIX,acs86.com,REJECT
 DOMAIN-SUFFIX,ad.12306.cn,REJECT
 DOMAIN-SUFFIX,ad.3.cn,REJECT
+DOMAIN-SUFFIX,ad.360yield.com,REJECT
 DOMAIN-SUFFIX,ad.95306.cn,REJECT
 DOMAIN-SUFFIX,ad.cctv.com,REJECT
+DOMAIN-SUFFIX,ad.flipboard.com,REJECT
 DOMAIN-SUFFIX,ad.mi.com,REJECT
 DOMAIN-SUFFIX,ad.thepaper.cn,REJECT
 DOMAIN-SUFFIX,ad.unimhk.com,REJECT
 DOMAIN-SUFFIX,ad.xiaomi.com,REJECT
+DOMAIN-SUFFIX,ad.yieldlab.net,REJECT
+DOMAIN-SUFFIX,ad.zanox.com,REJECT
 DOMAIN-SUFFIX,ad1.xiaomi.com,REJECT
+DOMAIN-SUFFIX,ad8.adfarm1.adition.com,REJECT
 DOMAIN-SUFFIX,adadvisor.net,REJECT
 DOMAIN-SUFFIX,adap.tv,REJECT
 DOMAIN-SUFFIX,adbxb.com,REJECT
@@ -1049,8 +1054,12 @@ DOMAIN-SUFFIX,adquan.com,REJECT
 DOMAIN-SUFFIX,ads.feedly.com,REJECT
 DOMAIN-SUFFIX,ads.genieessp.com,REJECT
 DOMAIN-SUFFIX,ads.mobclix.com,REJECT
+DOMAIN-SUFFIX,ads.newtentionassets.net,REJECT
+DOMAIN-SUFFIX,ads.nexage.com,REJECT
+DOMAIN-SUFFIX,ads.stickyadstv.com,REJECT
 DOMAIN-SUFFIX,ads.yahoo.com,REJECT
 DOMAIN-SUFFIX,adsame.com,REJECT
+DOMAIN-SUFFIX,adserver.snapads.com,REJECT
 DOMAIN-SUFFIX,adsunflower.com,REJECT
 DOMAIN-SUFFIX,adsunion.com,REJECT
 DOMAIN-SUFFIX,adups.com,REJECT
@@ -1064,12 +1073,15 @@ DOMAIN-SUFFIX,adwo.com,REJECT
 DOMAIN-SUFFIX,adxmi.com,REJECT
 DOMAIN-SUFFIX,adzerk.net,REJECT
 DOMAIN-SUFFIX,ajapk.com,REJECT
+DOMAIN-SUFFIX,ak.sascdn.com,REJECT
 DOMAIN-SUFFIX,allyes.cn,REJECT
 DOMAIN-SUFFIX,allyes.com,REJECT
 DOMAIN-SUFFIX,amazon-adsystem.com,REJECT
+DOMAIN-SUFFIX,analytics.query.yahoo.com,REJECT
 DOMAIN-SUFFIX,angsrvr.com,REJECT
 DOMAIN-SUFFIX,anquan.org,REJECT
 DOMAIN-SUFFIX,anysdk.com,REJECT
+DOMAIN-SUFFIX,api.branch.io,REJECT
 DOMAIN-SUFFIX,appads.com,REJECT
 DOMAIN-SUFFIX,appboy.com,REJECT
 DOMAIN-SUFFIX,applifier.com,REJECT
@@ -1080,13 +1092,16 @@ DOMAIN-SUFFIX,atdmt.com,REJECT
 DOMAIN-SUFFIX,audience.network,REJECT
 DOMAIN-SUFFIX,baifendian.com,REJECT
 DOMAIN-SUFFIX,bam.nr-data.net,REJECT
+DOMAIN-SUFFIX,bat.bing.com,REJECT
 DOMAIN-SUFFIX,baycode.cn,REJECT
+DOMAIN-SUFFIX,beacon.krxd.net,REJECT
 DOMAIN-SUFFIX,beacon.tingyun.com,REJECT
 DOMAIN-SUFFIX,behe.com,REJECT
 DOMAIN-SUFFIX,biddingx.com,REJECT
 DOMAIN-SUFFIX,bsdev.cn,REJECT
 DOMAIN-SUFFIX,btyou.com,REJECT
 DOMAIN-SUFFIX,buysellads.com,REJECT
+DOMAIN-SUFFIX,c.metrigo.com,REJECT
 DOMAIN-SUFFIX,c0563.com,REJECT
 DOMAIN-SUFFIX,cdn.jiuzhilan.com,REJECT
 DOMAIN-SUFFIX,chance-ad.com,REJECT
@@ -1099,12 +1114,20 @@ DOMAIN-SUFFIX,cmcore.com,REJECT
 DOMAIN-SUFFIX,cnzz.com,REJECT
 DOMAIN-SUFFIX,cnzzlink.com,REJECT
 DOMAIN-SUFFIX,collector.githubapp.com,REJECT
+DOMAIN-SUFFIX,combine.urbanairship.com,REJECT
+DOMAIN-SUFFIX,config.ioam.de,REJECT
+DOMAIN-SUFFIX,config2.mparticle.com,REJECT
+DOMAIN-SUFFIX,connect.facebook.net,REJECT
 DOMAIN-SUFFIX,coremetrics.com,REJECT
 DOMAIN-SUFFIX,crunchyroll.com,REJECT
 DOMAIN-SUFFIX,customer-security.online,REJECT
 DOMAIN-SUFFIX,czxiangyue.com,REJECT
+DOMAIN-SUFFIX,d.applovin.com,REJECT
+DOMAIN-SUFFIX,d.ligatus.com,REJECT
 DOMAIN-SUFFIX,ddapp.cn,REJECT
+DOMAIN-SUFFIX,de.ioam.de,REJECT
 DOMAIN-SUFFIX,dianru.com,REJECT
+DOMAIN-SUFFIX,dis.crieto.com,REJECT
 DOMAIN-SUFFIX,doubleverify.com,REJECT
 DOMAIN-SUFFIX,duapp.com,REJECT
 DOMAIN-SUFFIX,e.nexac.com,REJECT
@@ -1112,8 +1135,10 @@ DOMAIN-SUFFIX,edigitalsurvey.com,REJECT
 DOMAIN-SUFFIX,emarbox.com,REJECT
 DOMAIN-SUFFIX,exp.17wo.cn,REJECT
 DOMAIN-SUFFIX,fancyapi.com,REJECT
+DOMAIN-SUFFIX,farm.plista.com,REJECT
 DOMAIN-SUFFIX,fastapi.net,REJECT
 DOMAIN-SUFFIX,fastclick.net,REJECT
+DOMAIN-SUFFIX,fastly.bench.cedexis.com,REJECT
 DOMAIN-SUFFIX,flashtalking.com,REJECT
 DOMAIN-SUFFIX,flurry.com,REJECT
 DOMAIN-SUFFIX,fqtra.com,REJECT
@@ -1125,6 +1150,8 @@ DOMAIN-SUFFIX,haoghost.com,REJECT
 DOMAIN-SUFFIX,hosting.miarroba.info,REJECT
 DOMAIN-SUFFIX,hxspc.com,REJECT
 DOMAIN-SUFFIX,iadsdk.apple.com,REJECT
+DOMAIN-SUFFIX,ih.adscale.de,REJECT
+DOMAIN-SUFFIX,im1.56zzw.com,REJECT
 DOMAIN-SUFFIX,image.gentags.com,REJECT
 DOMAIN-SUFFIX,img.qdscgj.com,REJECT
 DOMAIN-SUFFIX,immob.cn,REJECT
@@ -1146,19 +1173,25 @@ DOMAIN-SUFFIX,krux.net,REJECT
 DOMAIN-SUFFIX,lnk8z.com,REJECT
 DOMAIN-SUFFIX,localytics.com,REJECT
 DOMAIN-SUFFIX,log.outbrain.com,REJECT
+DOMAIN-SUFFIX,log.umsns.com,REJECT
+DOMAIN-SUFFIX,logs.dashlane.com,REJECT
 DOMAIN-SUFFIX,lotuseed.com,REJECT
 DOMAIN-SUFFIX,lufax.com,REJECT
 DOMAIN-SUFFIX,madmini.com,REJECT
+DOMAIN-SUFFIX,mads.amazon.com,REJECT
 DOMAIN-SUFFIX,mathtag.com,REJECT
 DOMAIN-SUFFIX,mediav.com,REJECT
 DOMAIN-SUFFIX,megajoy.com,REJECT
 DOMAIN-SUFFIX,miidi.net,REJECT
 DOMAIN-SUFFIX,mixpanel.com,REJECT
+DOMAIN-SUFFIX,mmstat.com,REJECT
 DOMAIN-SUFFIX,mng-ads.com,REJECT
 DOMAIN-SUFFIX,mnxtu.com,REJECT
 DOMAIN-SUFFIX,moatads.com,REJECT
+DOMAIN-SUFFIX,mob.com,REJECT
 DOMAIN-SUFFIX,mobclix.com,REJECT
 DOMAIN-SUFFIX,mobfox.com,REJECT
+DOMAIN-SUFFIX,mobileapptracking.com,REJECT
 DOMAIN-SUFFIX,mobisage.cn,REJECT
 DOMAIN-SUFFIX,mopub.com,REJECT
 DOMAIN-SUFFIX,mxpnl.com,REJECT
@@ -1176,22 +1209,33 @@ DOMAIN-SUFFIX,overture.com,REJECT
 DOMAIN-SUFFIX,page.amap.com,REJECT
 DOMAIN-SUFFIX,pingdom.net,REJECT
 DOMAIN-SUFFIX,pingshetrip.com,REJECT
+DOMAIN-SUFFIX,pixel.rubiconproject.com,REJECT
 DOMAIN-SUFFIX,pixel.wp.com,REJECT
+DOMAIN-SUFFIX,play.googleapis.com,REJECT
 DOMAIN-SUFFIX,ppjia55.com,REJECT
+DOMAIN-SUFFIX,probes.cedexis.com,REJECT
+DOMAIN-SUFFIX,prophet.heise.de,REJECT
 DOMAIN-SUFFIX,publicidad.net,REJECT
 DOMAIN-SUFFIX,publicidad.tv,REJECT
 DOMAIN-SUFFIX,pubnub.com,REJECT
 DOMAIN-SUFFIX,qcl777.com,REJECT
 DOMAIN-SUFFIX,qiyou.com,REJECT
 DOMAIN-SUFFIX,qtmojo.com,REJECT
+DOMAIN-SUFFIX,quantcount.com,REJECT
 DOMAIN-SUFFIX,quantserve.com,REJECT
 DOMAIN-SUFFIX,qxxys.com,REJECT
+DOMAIN-SUFFIX,radar.cedexis.com,REJECT
 DOMAIN-SUFFIX,reachmax.cn,REJECT
 DOMAIN-SUFFIX,realtime.monitor.ppweb.com.cn,REJECT
 DOMAIN-SUFFIX,resetgey.com,REJECT
 DOMAIN-SUFFIX,responsys.net,REJECT
 DOMAIN-SUFFIX,revsci.net,REJECT
 DOMAIN-SUFFIX,rlcdn.com,REJECT
+DOMAIN-SUFFIX,router.bittorrent.com,REJECT
+DOMAIN-SUFFIX,rt.applovin.com,REJECT
+DOMAIN-SUFFIX,rtb.eanalyzer.de,REJECT
+DOMAIN-SUFFIX,rtb.metrigo.com,REJECT
+DOMAIN-SUFFIX,rts.mobula.sdk.duapps.com,REJECT
 DOMAIN-SUFFIX,scorecardresearch.com,REJECT
 DOMAIN-SUFFIX,serving-sys.com,REJECT
 DOMAIN-SUFFIX,shuiguo.com,REJECT
@@ -1200,17 +1244,24 @@ DOMAIN-SUFFIX,sitescout.com,REJECT
 DOMAIN-SUFFIX,smartadserver.com,REJECT
 DOMAIN-SUFFIX,smartmad.com,REJECT
 DOMAIN-SUFFIX,somecoding.com,REJECT
+DOMAIN-SUFFIX,spade.twitch.tv,REJECT
 DOMAIN-SUFFIX,sponsorpay.com,REJECT
 DOMAIN-SUFFIX,ssp.kssws.ks-cdn.com,REJECT
+DOMAIN-SUFFIX,static.plista.com,REJECT
 DOMAIN-SUFFIX,stats.chinaz.com,REJECT
 DOMAIN-SUFFIX,stats.developingperspective.com,REJECT
 DOMAIN-SUFFIX,stats.jpush.cn,REJECT
 DOMAIN-SUFFIX,switchadhub.com,REJECT
 DOMAIN-SUFFIX,synacast.com,REJECT
 DOMAIN-SUFFIX,sysdig.com,REJECT
+DOMAIN-SUFFIX,t.appsflyer.com,REJECT
+DOMAIN-SUFFIX,t1.visualrevenue.com,REJECT
+DOMAIN-SUFFIX,tag.yoc-adserver.com,REJECT
+DOMAIN-SUFFIX,tanx.com,REJECT
 DOMAIN-SUFFIX,tapjoyads.com,REJECT
 DOMAIN-SUFFIX,th7.cn,REJECT
 DOMAIN-SUFFIX,tiqcdn.com,REJECT
+DOMAIN-SUFFIX,tongbu.com,REJECT
 DOMAIN-SUFFIX,tracker.yhd.com,REJECT
 DOMAIN-SUFFIX,trafficmp.com,REJECT
 DOMAIN-SUFFIX,ugvip.com,REJECT
@@ -1222,6 +1273,7 @@ DOMAIN-SUFFIX,uri6.com,REJECT
 DOMAIN-SUFFIX,ushaqi.com,REJECT
 DOMAIN-SUFFIX,uyunad.com,REJECT
 DOMAIN-SUFFIX,vamaker.com,REJECT
+DOMAIN-SUFFIX,video.plista.com,REJECT
 DOMAIN-SUFFIX,vpon.com,REJECT
 DOMAIN-SUFFIX,waps.cn,REJECT
 DOMAIN-SUFFIX,whpxy.com,REJECT
@@ -1229,6 +1281,7 @@ DOMAIN-SUFFIX,wiyun.com,REJECT
 DOMAIN-SUFFIX,wooboo.com.cn,REJECT
 DOMAIN-SUFFIX,wqmobile.com,REJECT
 DOMAIN-SUFFIX,wrating.com,REJECT
+DOMAIN-SUFFIX,x.ligatus.com,REJECT
 DOMAIN-SUFFIX,xdbwc.com,REJECT
 DOMAIN-SUFFIX,xiaozhen.com,REJECT
 DOMAIN-SUFFIX,xibao100.com,REJECT
@@ -1250,7 +1303,7 @@ DOMAIN-SUFFIX,zzsx8.com,REJECT
 
 // proxy list from gfwlist!
 // SS config file for surge with gfw list 
-// updated on 2017-05-31 17:01:35
+// updated on 2017-06-10 23:21:37
 
 DOMAIN-SUFFIX,2dbook.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,4tern.com,Proxy,force-remote-dns
