--- a/configFileHere/whitelist.conf
+++ b/configFileHere/whitelist.conf
@@ -27,7 +27,7 @@ IP-CIDR, 17.0.0.0/8, DIRECT, no-resolve
 
 // AD Block
 // thx  https://github.com/lhie1/Surge 
-// updated on 2017-06-10 23:21:41
+// updated on 2017-06-15 01:02:25
 
 DOMAIN-SUFFIX,ad.m.iqiyi.com,REJECT
 DOMAIN-SUFFIX,afp.iqiyi.com,REJECT
@@ -386,8 +386,6 @@ DOMAIN-SUFFIX,afp.adchina.com,REJECT
 DOMAIN-SUFFIX,afp.alicdn.com,REJECT
 DOMAIN-SUFFIX,agoodm.m.taobao.com,REJECT
 DOMAIN-SUFFIX,agoodm.wapa.taobao.com,REJECT
-DOMAIN-SUFFIX,ai.m.taobao.com,REJECT
-DOMAIN-SUFFIX,ai.taobao.com,REJECT
 DOMAIN-SUFFIX,alipaylog.com,REJECT
 DOMAIN-SUFFIX,amdc.alipay.com,REJECT
 DOMAIN-SUFFIX,amdc.m.taobao.com,REJECT
@@ -947,7 +945,6 @@ DOMAIN-SUFFIX,ucsec1.ucweb.com,REJECT
 DOMAIN-SUFFIX,aoodoo.feng.com,REJECT
 DOMAIN-SUFFIX,bbsanalytics.weiphone.net,REJECT
 DOMAIN-SUFFIX,fengbuy.com,REJECT
-DOMAIN-SUFFIX,tutuapp.com,REJECT
 DOMAIN-SUFFIX,we.tm,REJECT
 DOMAIN-SUFFIX,yes1.feng.com,REJECT
 DOMAIN,wifiapi01.51y5.net,REJECT
@@ -1011,6 +1008,7 @@ DOMAIN-SUFFIX,a.applovin.com,REJECT
 DOMAIN-SUFFIX,a.visualrevenue.com,REJECT
 DOMAIN-SUFFIX,a1.itc.cn,REJECT
 DOMAIN-SUFFIX,acs86.com,REJECT
+DOMAIN-SUFFIX,ad.10010.com,REJECT
 DOMAIN-SUFFIX,ad.12306.cn,REJECT
 DOMAIN-SUFFIX,ad.3.cn,REJECT
 DOMAIN-SUFFIX,ad.360yield.com,REJECT
@@ -1079,7 +1077,6 @@ DOMAIN-SUFFIX,appads.com,REJECT
 DOMAIN-SUFFIX,appboy.com,REJECT
 DOMAIN-SUFFIX,applifier.com,REJECT
 DOMAIN-SUFFIX,applovin.com,REJECT
-DOMAIN-SUFFIX,app-measurement.com,REJECT
 DOMAIN-SUFFIX,appsflyer.com,REJECT
 DOMAIN-SUFFIX,atdmt.com,REJECT
 DOMAIN-SUFFIX,audience.network,REJECT
@@ -1254,7 +1251,6 @@ DOMAIN-SUFFIX,tanx.com,REJECT
 DOMAIN-SUFFIX,tapjoyads.com,REJECT
 DOMAIN-SUFFIX,th7.cn,REJECT
 DOMAIN-SUFFIX,tiqcdn.com,REJECT
-DOMAIN-SUFFIX,tongbu.com,REJECT
 DOMAIN-SUFFIX,tracker.yhd.com,REJECT
 DOMAIN-SUFFIX,trafficmp.com,REJECT
 DOMAIN-SUFFIX,ugvip.com,REJECT
@@ -1297,7 +1293,7 @@ DOMAIN-SUFFIX,zzsx8.com,REJECT
 DOMAIN-SUFFIX,cn,ChinaProxy
 
 // white list from dnsmasq_china_list!
-// updated on 2017-06-10 23:22:56
+// updated on 2017-06-15 01:04:11
 DOMAIN-SUFFIX,6.com,ChinaProxy
 DOMAIN-SUFFIX,gold.net,ChinaProxy
 DOMAIN-SUFFIX,00.net,ChinaProxy
@@ -4616,6 +4612,7 @@ DOMAIN-SUFFIX,520885.com,ChinaProxy
 DOMAIN-SUFFIX,520apk.com,ChinaProxy
 DOMAIN-SUFFIX,520bn.com,ChinaProxy
 DOMAIN-SUFFIX,520cfc.com,ChinaProxy
+DOMAIN-SUFFIX,520code.cc,ChinaProxy
 DOMAIN-SUFFIX,520e3e4.com,ChinaProxy
 DOMAIN-SUFFIX,520fanhuan.com,ChinaProxy
 DOMAIN-SUFFIX,520fjl.com,ChinaProxy
@@ -4940,6 +4937,7 @@ DOMAIN-SUFFIX,56pan.com,ChinaProxy
 DOMAIN-SUFFIX,56qss.com,ChinaProxy
 DOMAIN-SUFFIX,56tl.com,ChinaProxy
 DOMAIN-SUFFIX,56uu.com,ChinaProxy
+DOMAIN-SUFFIX,56weiyu.com,ChinaProxy
 DOMAIN-SUFFIX,56ye.net,ChinaProxy
 DOMAIN-SUFFIX,56yk.com,ChinaProxy
 DOMAIN-SUFFIX,56ylt.com,ChinaProxy
@@ -8294,6 +8292,7 @@ DOMAIN-SUFFIX,b181.com,ChinaProxy
 DOMAIN-SUFFIX,b1wt.com,ChinaProxy
 DOMAIN-SUFFIX,b1wv.com,ChinaProxy
 DOMAIN-SUFFIX,b1yq.com,ChinaProxy
+DOMAIN-SUFFIX,b1yt.com,ChinaProxy
 DOMAIN-SUFFIX,b1za.com,ChinaProxy
 DOMAIN-SUFFIX,builder.com,ChinaProxy
 DOMAIN-SUFFIX,b2b110.com,ChinaProxy
@@ -10741,6 +10740,7 @@ DOMAIN-SUFFIX,chengxuyuans.com,ChinaProxy
 DOMAIN-SUFFIX,chengyangnews.com,ChinaProxy
 DOMAIN-SUFFIX,chengyichao.info,ChinaProxy
 DOMAIN-SUFFIX,chengyouli.com,ChinaProxy
+DOMAIN-SUFFIX,chengyuw.com,ChinaProxy
 DOMAIN-SUFFIX,chengzivr.com,ChinaProxy
 DOMAIN-SUFFIX,chenhr.com,ChinaProxy
 DOMAIN-SUFFIX,chenhui.org,ChinaProxy
@@ -16218,6 +16218,7 @@ DOMAIN-SUFFIX,fututa.com,ChinaProxy
 DOMAIN-SUFFIX,fuwaliuxue.com,ChinaProxy
 DOMAIN-SUFFIX,fuwo.com,ChinaProxy
 DOMAIN-SUFFIX,fuwuce.com,ChinaProxy
+DOMAIN-SUFFIX,fuwuqu.com,ChinaProxy
 DOMAIN-SUFFIX,fuxcha.com,ChinaProxy
 DOMAIN-SUFFIX,fuxinbank.com,ChinaProxy
 DOMAIN-SUFFIX,fuxinde.com,ChinaProxy
@@ -18363,6 +18364,7 @@ DOMAIN-SUFFIX,himovie.net,ChinaProxy
 DOMAIN-SUFFIX,himy2.com,ChinaProxy
 DOMAIN-SUFFIX,hinabian.com,ChinaProxy
 DOMAIN-SUFFIX,hinavi.net,ChinaProxy
+DOMAIN-SUFFIX,hindlish.com,ChinaProxy
 DOMAIN-SUFFIX,hioyun.com,ChinaProxy
 DOMAIN-SUFFIX,hipandashop.com,ChinaProxy
 DOMAIN-SUFFIX,hiparking.com,ChinaProxy
@@ -20846,6 +20848,7 @@ DOMAIN-SUFFIX,jianshiduo.com,ChinaProxy
 DOMAIN-SUFFIX,jianshu.com,ChinaProxy
 DOMAIN-SUFFIX,jianshu.io,ChinaProxy
 DOMAIN-SUFFIX,jianshuapi.com,ChinaProxy
+DOMAIN-SUFFIX,jianshunrui.com,ChinaProxy
 DOMAIN-SUFFIX,jiansite.com,ChinaProxy
 DOMAIN-SUFFIX,jianwang360.com,ChinaProxy
 DOMAIN-SUFFIX,jianxun.com,ChinaProxy
@@ -28456,6 +28459,7 @@ DOMAIN-SUFFIX,reman8.com,ChinaProxy
 DOMAIN-SUFFIX,bj.com,ChinaProxy
 DOMAIN-SUFFIX,remehealth.com,ChinaProxy
 DOMAIN-SUFFIX,reminjiu.net,ChinaProxy
+DOMAIN-SUFFIX,remote88.com,ChinaProxy
 DOMAIN-SUFFIX,remotedu.com,ChinaProxy
 DOMAIN-SUFFIX,renai19.com,ChinaProxy
 DOMAIN-SUFFIX,renailady.com,ChinaProxy
@@ -32097,6 +32101,7 @@ DOMAIN-SUFFIX,ttysq.com,ChinaProxy
 DOMAIN-SUFFIX,ttzbb.com,ChinaProxy
 DOMAIN-SUFFIX,ttzhushou.com,ChinaProxy
 DOMAIN-SUFFIX,tu11.com,ChinaProxy
+DOMAIN-SUFFIX,tu303.com,ChinaProxy
 DOMAIN-SUFFIX,tu76.com,ChinaProxy
 DOMAIN-SUFFIX,tu8.cc,ChinaProxy
 DOMAIN-SUFFIX,tu960.com,ChinaProxy
@@ -34769,6 +34774,7 @@ DOMAIN-SUFFIX,xesee.com,ChinaProxy
 DOMAIN-SUFFIX,xesv5.com,ChinaProxy
 DOMAIN-SUFFIX,tc.com,ChinaProxy
 DOMAIN-SUFFIX,world.org,ChinaProxy
+DOMAIN-SUFFIX,yun.com,ChinaProxy
 DOMAIN-SUFFIX,xf120.com,ChinaProxy
 DOMAIN-SUFFIX,xf5z.com,ChinaProxy
 DOMAIN-SUFFIX,xf9168.com,ChinaProxy
@@ -36704,6 +36710,7 @@ DOMAIN-SUFFIX,youhuafuzhi.com,ChinaProxy
 DOMAIN-SUFFIX,youhugmedia.com,ChinaProxy
 DOMAIN-SUFFIX,youhundao.com,ChinaProxy
 DOMAIN-SUFFIX,youiv.in,ChinaProxy
+DOMAIN-SUFFIX,youjia2016.com,ChinaProxy
 DOMAIN-SUFFIX,youjiady.com,ChinaProxy
 DOMAIN-SUFFIX,youjialink.com,ChinaProxy
 DOMAIN-SUFFIX,youjiangxx.com,ChinaProxy
@@ -38440,6 +38447,7 @@ DOMAIN-SUFFIX,zp.do,ChinaProxy
 DOMAIN-SUFFIX,zp0719.com,ChinaProxy
 DOMAIN-SUFFIX,zpbaobaoshop.com,ChinaProxy
 DOMAIN-SUFFIX,zpfdc.com,ChinaProxy
+DOMAIN-SUFFIX,zpjsk.com,ChinaProxy
 DOMAIN-SUFFIX,zplayworld.com,ChinaProxy
 DOMAIN-SUFFIX,zppk.net,ChinaProxy
 DOMAIN-SUFFIX,zppxba.com,ChinaProxy
