--- a/configFileHere/gfwlist.conf
+++ b/configFileHere/gfwlist.conf
@@ -36,7 +36,7 @@ DOMAIN, apps.mzstatic.com ,Proxy,force-remote-dns
 
 // AD Block
 // thx  https://github.com/lhie1/Surge 
-// updated on 2017-06-25 15:28:06
+// updated on 2017-07-03 14:25:46
 
 DOMAIN-SUFFIX,ad.m.iqiyi.com,REJECT
 DOMAIN-SUFFIX,afp.iqiyi.com,REJECT
@@ -400,7 +400,6 @@ DOMAIN-SUFFIX,agoodm.m.taobao.com,REJECT
 DOMAIN-SUFFIX,agoodm.wapa.taobao.com,REJECT
 DOMAIN-SUFFIX,alipaylog.com,REJECT
 DOMAIN-SUFFIX,amdc.alipay.com,REJECT
-DOMAIN-SUFFIX,amdc.m.taobao.com,REJECT
 DOMAIN-SUFFIX,api.wapa.taobao.com,REJECT
 DOMAIN-SUFFIX,api.waptest.taobao.com,REJECT
 DOMAIN-SUFFIX,apoll.m.taobao.com,REJECT
@@ -436,7 +435,6 @@ DOMAIN-SUFFIX,i.ipinyou.com,REJECT
 DOMAIN-SUFFIX,init.phpwind.com,REJECT
 DOMAIN-SUFFIX,intl.wapa.taobao.com,REJECT
 DOMAIN-SUFFIX,intl.waptest.taobao.com,REJECT
-DOMAIN-SUFFIX,ju.taobao.com,REJECT
 DOMAIN-SUFFIX,jxlog.istreamsche.com,REJECT
 DOMAIN-SUFFIX,log.umtrack.com,REJECT
 DOMAIN-SUFFIX,m.intl.taobao.com,REJECT
@@ -570,6 +568,7 @@ DOMAIN-SUFFIX,inside.baidu.com,REJECT
 DOMAIN-SUFFIX,itsdata.map.baidu.com,REJECT
 DOMAIN-SUFFIX,j.br.baidu.com,REJECT
 DOMAIN-SUFFIX,kstj.baidu.com,REJECT
+DOMAIN-SUFFIX,landingpage-cdn1.gbicom.cn,REJECT
 DOMAIN-SUFFIX,log.music.baidu.com,REJECT
 DOMAIN-SUFFIX,log.nuomi.com,REJECT
 DOMAIN-SUFFIX,log.waimai.baidu.com,REJECT
@@ -1035,6 +1034,7 @@ DOMAIN-SUFFIX,adinfuse.com,REJECT
 DOMAIN-SUFFIX,adjust.com,REJECT
 DOMAIN-SUFFIX,adjust.io,REJECT
 DOMAIN-SUFFIX,adlive.cn,REJECT
+DOMAIN-SUFFIX,adm-cnzz.net,REJECT
 DOMAIN-SUFFIX,admin5.com,REJECT
 DOMAIN-SUFFIX,admob.com,REJECT
 DOMAIN-SUFFIX,admon.cn,REJECT
@@ -1289,7 +1289,7 @@ DOMAIN-SUFFIX,zzsx8.com,REJECT
 
 // proxy list from gfwlist!
 // SS config file for surge with gfw list 
-// updated on 2017-06-25 15:28:03
+// updated on 2017-07-03 14:25:43
 
 DOMAIN-SUFFIX,2dbook.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,4tern.com,Proxy,force-remote-dns
