--- a/configFileHere/gfwlist.conf
+++ b/configFileHere/gfwlist.conf
@@ -36,14 +36,14 @@ DOMAIN, apps.mzstatic.com ,Proxy,force-remote-dns
 
 // AD Block
 // thx  https://github.com/lhie1/Surge 
-// updated on 2017-07-14 18:20:50
+// updated on 2017-07-24 20:23:23
 
 
 
 
 // proxy list from gfwlist!
 // SS config file for surge with gfw list 
-// updated on 2017-07-14 18:20:47
+// updated on 2017-07-24 20:23:20
 
 DOMAIN-SUFFIX,2dbook.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,4tern.com,Proxy,force-remote-dns
@@ -57,6 +57,7 @@ DOMAIN-SUFFIX,arena.taipei,Proxy,force-remote-dns
 DOMAIN-SUFFIX,asianspiss.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,athenaeizou.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,azubu.tv,Proxy,force-remote-dns
+DOMAIN-SUFFIX,banorte.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bash-hackers.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,beeg.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bloombergview.com,Proxy,force-remote-dns
@@ -148,6 +149,11 @@ DOMAIN-SUFFIX,nationwide.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,www.nbc.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,neo-miracle.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,netflix.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,nflximg.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,nflximg.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,nflxext.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,nflxso.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,nflxvideo.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mo.nightlife141.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nordstrom.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nordstromimage.com,Proxy,force-remote-dns
@@ -163,6 +169,7 @@ DOMAIN-SUFFIX,ontrac.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pandora.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pandora.tv,Proxy,force-remote-dns
 DOMAIN-SUFFIX,parkansky.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,phmsociety.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pimg.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pure18.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,qq.co.za,Proxy,force-remote-dns
@@ -191,6 +198,7 @@ DOMAIN-SUFFIX,tracfone.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tryheart.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,turntable.fm,Proxy,force-remote-dns
 DOMAIN-SUFFIX,twerkingbutt.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,ulop.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vegasred.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vevo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vip-enterprise.com,Proxy,force-remote-dns
@@ -760,6 +768,7 @@ DOMAIN-SUFFIX,amiblockedornot.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,amigobbs.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,amitabhafoundation.us,Proxy,force-remote-dns
 DOMAIN-SUFFIX,amnesty.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,amnesty.org.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,amnesty.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,amnestyusa.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,amnyemachen.org,Proxy,force-remote-dns
@@ -1031,6 +1040,7 @@ DOMAIN-SUFFIX,breakwall.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,briian.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,briefdream.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,brizzly.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,brkmd.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,broadbook.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,broadpressinc.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bbs.brockbbs.com,Proxy,force-remote-dns
@@ -1039,6 +1049,7 @@ DOMAIN-SUFFIX,brutaltgp.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bt2mag.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bt95.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,btaia.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,btbtav.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,btdigg.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,btku.me,Proxy,force-remote-dns
 DOMAIN-SUFFIX,btku.org,Proxy,force-remote-dns
@@ -1154,6 +1165,7 @@ DOMAIN-SUFFIX,cgst.edu,Proxy,force-remote-dns
 DOMAIN-SUFFIX,change.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,changp.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,changsa.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,channel8news.sg,Proxy,force-remote-dns
 DOMAIN-SUFFIX,chapm25.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,chaturbate.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,chuang-yen.org,Proxy,force-remote-dns
@@ -1752,6 +1764,7 @@ DOMAIN-SUFFIX,flgjustice.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,flickr.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,staticflickr.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,flickrhivemind.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,flickriver.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fling.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,flipkart.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cn.fmnnow.com,Proxy,force-remote-dns
@@ -1761,7 +1774,6 @@ DOMAIN-SUFFIX,forum4hk.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fangong.forums-free.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pioneer-worker.forums-free.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,4sqi.net,Proxy,force-remote-dns
-DOMAIN-SUFFIX,fotop.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,video.foxbusiness.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,foxgay.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fringenetwork.com,Proxy,force-remote-dns
@@ -1806,6 +1818,7 @@ DOMAIN-SUFFIX,freegao.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,free-hada-now.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freeilhamtohti.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freekwonpyong.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,saveliuxiaobo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freelotto.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freeman2.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freeopenvpn.com,Proxy,force-remote-dns
@@ -1851,6 +1864,7 @@ DOMAIN-SUFFIX,fscked.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fsurf.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ftchinese.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,www.ftchinese.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,ftv.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fucd.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fuckcnnic.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fuckgfw.org,Proxy,force-remote-dns
@@ -1894,6 +1908,7 @@ DOMAIN-SUFFIX,gaozhisheng.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gardennetworks.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gardennetworks.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gartlive.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,gate-project.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gather.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gati.org.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gaybubble.com,Proxy,force-remote-dns
@@ -2377,7 +2392,6 @@ DOMAIN-SUFFIX,internetfreedom.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,internetpopculture.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,inxian.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ipalter.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,ipcf.org.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,iphone4hongkong.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,iphonehacks.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,iphonetaiwan.org,Proxy,force-remote-dns
@@ -2446,6 +2460,7 @@ DOMAIN-SUFFIX,jamyangnorbu.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,jandyx.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,janwongphoto.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,japan-whores.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,jav101.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,jav2be.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,jav68.tv,Proxy,force-remote-dns
 DOMAIN-SUFFIX,javakiba.org,Proxy,force-remote-dns
@@ -2541,6 +2556,7 @@ DOMAIN-SUFFIX,kcsoftwares.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kebrum.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kechara.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,keepandshare.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,keezmovies.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kendincos.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kenengba.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,keontech.net,Proxy,force-remote-dns
@@ -2660,6 +2676,7 @@ DOMAIN-SUFFIX,listorious.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,liudejun.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,liuhanyu.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,liujianshu.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,liuxiaobo.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,liuxiaotong.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,livedoor.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,liveleak.com,Proxy,force-remote-dns
@@ -2873,6 +2890,7 @@ DOMAIN-SUFFIX,mpettis.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mpfinance.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mpinews.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mponline.hk,Proxy,force-remote-dns
+DOMAIN-SUFFIX,mqxd.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mrtweet.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,news.hk.msn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,news.msn.com.tw,Proxy,force-remote-dns
@@ -3028,6 +3046,7 @@ DOMAIN-SUFFIX,opendn.xyz,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sytes.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,whodns.xyz,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zapto.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,dynupdate.no-ip.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nobel.se,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nobelprize.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nobodycanstop.us,Proxy,force-remote-dns
@@ -3081,6 +3100,7 @@ DOMAIN-SUFFIX,nytimes.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nytimg.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,userapi.nytlog.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cn.nytstyle.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,nytstyle.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nzchinese.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nzchinese.net.nz,Proxy,force-remote-dns
 DOMAIN-SUFFIX,observechina.net,Proxy,force-remote-dns
@@ -3319,6 +3339,7 @@ DOMAIN-SUFFIX,provpnaccounts.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,proxfree.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,proxyanonimo.es,Proxy,force-remote-dns
 DOMAIN-SUFFIX,proxynetwork.org.uk,Proxy,force-remote-dns
+DOMAIN-SUFFIX,pscp.tv,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pts.org.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pttvan.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pubu.com.tw,Proxy,force-remote-dns
@@ -3484,7 +3505,6 @@ DOMAIN-SUFFIX,robustnessiskey.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,roc-taiwan.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rocket-inc.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,www2.rocketbbs.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,rocmp.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rojo.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ronjoneswriter.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,rolia.net,Proxy,force-remote-dns
@@ -4165,6 +4185,7 @@ DOMAIN-SUFFIX,tuvpn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tuzaijidi.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tw01.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tumblr.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,blog.soylent.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tv.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tvants.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,forum.tvb.com,Proxy,force-remote-dns
@@ -4278,6 +4299,7 @@ DOMAIN-SUFFIX,legaltech.law.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,blogs.tampabay.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,contests.twilio.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,embr.in,Proxy,force-remote-dns
+DOMAIN-SUFFIX,u9un.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ubddns.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,uberproxy.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,uc-japan.org,Proxy,force-remote-dns
@@ -4608,6 +4630,7 @@ DOMAIN-SUFFIX,worldvpn.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wordpress.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cnbbnews.wordpress.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,chenshan20042005.wordpress.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,hkanews.wordpress.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,jobnewera.wordpress.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,sujiatun.wordpress.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wp.com,Proxy,force-remote-dns
